--- a/style.css
+++ b/style.css
@@ -542,14 +542,29 @@ footer{
     font-size: 2.4rem;
     color: #333;
 }
-
+.dropdown{
+    background: rgb(0 0 0 / 50%);;
+    position: absolute;
+    bottom: -53rem;
+    padding: 9rem;
+    display: flex;
+    flex-direction: column;
+    right: 6rem;
+    align-items: center;
+    display: none;
+}
+.dropdown a{
+    font-size: 2.6rem;
+    color: var(--white-color);
+    padding: 2rem;
+}
 /* meadia query */
 @media(max-width:1200px){
     html{
         font-size: 55%;
     }
     .home .profession-container{
-        right: -8rem;
+        right: -12rem;
     }
     .home .profession-container .home-img img{
         top: 6%;
@@ -571,6 +586,9 @@ footer{
 }
 
 @media(max-width:1024px){
+    .home .profession-container{
+        right: -24rem;
+    }
     .header{
         padding: 2rem 3%;
     }
@@ -582,6 +600,10 @@ footer{
     }
     .home .profession-container .overlay{
         right: -15rem;
+    }
+    .home .profession-container .home-img{
+        top: 13%;
+        right: -5rem;
     }
 }
 @media(max-width:991px){
@@ -609,7 +631,7 @@ footer{
         padding: 3rem;
         }
         .home .profession-container{
-            right: -43rem;
+            right: -52rem;
         }
         .home .profession-container .profession-box{
             top: -14px;
@@ -644,12 +666,30 @@ footer{
         }
 }
 @media(max-width:420px){
+    .header nav{
+        display: none;
+    }
+    body{
+        overflow-x: hidden;
+    }
     .home .home-content{
         max-width: 41rem;
         padding: 3rem;
         }
+        #menu-icon{
+ 
+        color: var(--white-color);
+         right: 0;
+         margin: 2rem;
+         display: block;
+        }
+        #darkMode-icon{
+           
+           right: 0;
+        }
         .home .profession-container{
-            right: -82rem;
+            display: none;
+            right: -92rem;
         }
         .home .profession-container .profession-box{
             top: -14px;
